# discord-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  cursor-config-template.json  glama.json  pyproject.toml  start.ps1
.cursor/: mcp.json
docs/: README.md  TECHNICAL.md
src/discord_mcp/: __init__.py  agentic.py  portmanteau.py  rag.py  rate_limit.py  server.py  state.py
src/discord_mcp/sampling/: __init__.py  discord_sampling_handler.py
src/discord_mcp/skills/discord-ops/: SKILL.md
src/discord_mcp/skills/discord-rag/: SKILL.md
webapp/: index.html  package-lock.json  package.json  start.ps1  tailwind.config.ts  vite.config.ts
webapp/src/: App.tsx
webapp/src/components/: MessageViewer.tsx
webapp/src/components/layout/: AppLayout.tsx  LoggerPanel.tsx  Sidebar.tsx  TopBar.tsx
webapp/src/pages/: Apps.tsx  Channels.tsx  Dashboard.tsx  Favorites.tsx  Guilds.tsx  Help.tsx  Invites.tsx  Members.tsx  Messages.tsx  Rag.tsx  SendMessage.tsx  Settings.tsx  Skills.tsx  Stats.tsx  Tools.tsx  Trawl.tsx
